log
Fri 19 Aug 2022 12:29:37 PM UTC: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
54ddba0
Fri 19 Aug 2022 12:33:47 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
Compilation failed
c2ea7ad
Fri 19 Aug 2022 12:47:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a411db1
Fri 19 Aug 2022 12:48:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b74ef38
Fri 19 Aug 2022 12:55:26 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
b131903
Fri 19 Aug 2022 01:00:49 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/70
57cbcac
Fri 19 Aug 2022 01:05:43 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   61 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:63:9: error: unused variable ‘newNode’ [-Werror=unused-variable]
   63 |   Node *newNode = createNode(data);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4534fd
Fri 19 Aug 2022 01:09:22 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   61 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4b0c885
Fri 19 Aug 2022 01:20:29 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:12: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   40 |   if (!list->first) return NULL;
      |            ^~
list.c:41:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   41 |   list->current=list->first;
      |                     ^~
list.c:42:15: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   42 |   return (list->first->data);
      |               ^~
list.c: In function ‘pushFront’:
list.c:63:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   63 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:62:6: note: declared here
   62 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
28f278d
Sun 21 Aug 2022 05:29:51 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   64 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:63:6: note: declared here
   63 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
36200b7
Sun 21 Aug 2022 05:33:55 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   64 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:63:6: note: declared here
   63 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5b8933e
Sun 21 Aug 2022 06:00:17 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:66:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   66 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:65:6: note: declared here
   65 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f6fb32
Sun 21 Aug 2022 06:29:54 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:66:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   66 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:65:6: note: declared here
   65 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c: In function ‘pushCurrent’:
list.c:88:24: error: ‘lsit’ undeclared (first use in this function); did you mean ‘list’?
   88 |   if (list->current == lsit->tail){
      |                        ^~~~
      |                        list
list.c:88:24: note: each undeclared identifier is reported only once for each function it appears in
list.c:90:34: error: expected ‘;’ before ‘:’ token
   90 |     list->current->next = newNode:
      |                                  ^
      |                                  ;
list.c:95:27: error: ‘List’ {aka ‘struct List’} has no member named ‘currrent’; did you mean ‘current’?
   95 |     newNode->next = list->currrent->next;
      |                           ^~~~~~~~
      |                           current
cc1: all warnings being treated as errors
Compilation failed
7219886
Sun 21 Aug 2022 06:30:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:66:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   66 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:65:6: note: declared here
   65 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c: In function ‘pushCurrent’:
list.c:90:34: error: expected ‘;’ before ‘:’ token
   90 |     list->current->next = newNode:
      |                                  ^
      |                                  ;
list.c:95:27: error: ‘List’ {aka ‘struct List’} has no member named ‘currrent’; did you mean ‘current’?
   95 |     newNode->next = list->currrent->next;
      |                           ^~~~~~~~
      |                           current
cc1: all warnings being treated as errors
Compilation failed
7ad846a
